packages/ui-library/src/css/layout/_dashboard-cards.scss
/* ... */
@mixin flippedAway {
    @include transform(rotateY(180deg));
}

@mixin flipper {
    @include transition(all 0.2s ease-in-out);
    @include backface-visibility();
}

@mixin cardFrame {
    @include border-radius(2px);
    @include box-shadow(0 2px 4px rgba(0, 0, 0, 0.05));

    background: $color-white;
    border: 1px solid $color-neutral-70;
}

.dashboard-card {
    @include flexbox;

    position: relative;

    > * {
        @include flexbox-grow(1);
    }

    &__control {
        position: absolute;
        right: $spacing-sm;
        top: $spacing-sm;
    }

    &__front {
        @include cardFrame;
        @include flipper;
        @include flippedTo;
        @include flexbox;
        @include flexbox-direction(column);

        box-sizing: border-box;
        padding: $spacing-xl $spacing-lg;
        min-height: 227px;

        @media (max-width: $condensedBreakpoint) {
            padding: $spacing-xl $spacing-md;
        }
    }

    &--flipped &__front {
        @include flippedAway;
    }

    &__back {
        @include cardFrame;
        @include flipper;
        @include flippedAway;

        padding: $spacing-md;
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;

        @media (max-width: $condensedBreakpoint) and (min-width: $fullwidthBreakpoint) {
            padding-top: $spacing-xl;
        }
    }

    label.dashboard-card__make-default {
        position: absolute;
        bottom: 21px;
        left: 21px;
        margin: 0;

        .label-text {
            color: $color-elephant;
        }
    }

    &--flipped &__back {
        @include flippedTo;
    }

    &__front-title {
        @include flexbox;
        @include flexbox-grow(1);

        align-items: center;
        justify-content: center;
    }

    &__title-icon {
        margin-right: $spacing-sm;
        line-height: 25px;
        display: inline-block;
        vertical-align: middle;

        font-size: 30px;

        color: $color-charting-indigo;

        @media (max-width: $condensedBreakpoint) and (min-width: $fullwidthBreakpoint) {
            display: none;
        }
    }

    &__title-text {
        text-transform: uppercase;
        font-size: 18px;
        color: $color-neutral-10;
        display: inline-block;
        vertical-align: middle;
    }

    &__value {
        color: $color-neutral-10;
        text-align: center;
        font-size: 55px;
        line-height: 1em;
        min-height: 1em;
        @include font-pn-semibold;
        margin: $spacing-md 0 0;
    }

    &__description,
    &__subtitle {
        font-size: 12px;
        text-align: center;
        color: $color-neutral-10;
    }

    &__chart {
        margin-left: 50%;
        transform: translateX(-50%);
    }

    &__range-selector {
        transform: translateX(-50%);
        margin: 0 0 0 50%;
        white-space: nowrap;

        label {
            float: none;
        }
    }

    &__stat-list {
        padding: 0 $spacing-md;
    }

    &__stat-row {
        @include flexbox();
        @include flexbox-direction(row);

        > * {
            @include flexbox-grow(1);
        }
    }

    &__back-title {
        @include standoutText;

        display: inline-block;
        @include font-pn-light;
        font-size: 16px;
        margin-bottom: $spacing-md;
        padding: $spacing-xs $spacing-sm;
        text-transform: uppercase;
    }

    &__stat-row-label {
        font-size: 14px;
        color: $color-strong-neutral-30;
        margin-bottom: $spacing-sm;

        &:last-child {
            margin-bottom: 0;
        }
    }

    &__stat-row-number {
        text-align: right;
        font-size: 16px;
        color: $color-charting-indigo;
    }

    &__error {
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translateX(-50%) translateY(-50%);
        text-align: center;
        color: $color-neutral-10;
    }

    &__loader {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-50%) !important;
        margin: 0 !important;
    }

    &__error-text {
        font-size: 14px;
        line-height: 1.3em;
        max-width: 200px;
    }

    &__error-icon {
        font-size: 60px;
        margin: 0 0 $spacing-md;
    }

    &--magenta {
        .dashboard-card__title-icon,
        .dashboard-card__stat-row-number,
        .stat-area-card__value, {
            color: $color-charting-magenta;
        }
        .dashboard-card__back-title,
        .stat-card__primary-number {
            background-color: $color-charting-magenta;
        }
    }

    &--blue {
        .dashboard-card__title-icon,
        .dashboard-card__stat-row-number,
        .stat-area-card__value {
            color: $color-charting-blue;
        }
        .dashboard-card__back-title,
        .stat-card__primary-number {
            background-color: $color-charting-blue;
        }
    }

    &--cyan {
        .dashboard-card__title-icon,
        .dashboard-card__stat-row-number,
        .stat-area-card__value {
            color: $color-charting-cyan;
        }
        .dashboard-card__back-title,
        .stat-card__primary-number {
            background-color: $color-charting-cyan;
        }
    }

}

.dashboard-card-row {
    margin-bottom: $spacing-md;

    > * {
        margin-bottom: $spacing-md;

        &:last-child {
            margin-bottom: 0;
        }
    }

    @media (min-width: $fullwidthBreakpoint) {
        @include flexbox;
        @include flexbox-direction(row);

        align-items: stretch;

        > * {
            @include flexbox-grow(1);

            &.dashboard-card--double {
                @include flexbox-grow(2);
                flex-basis: 1em;
            }

            flex-basis: 0;
            margin-bottom: 0;
            margin-right: $spacing-md;

            &:last-child {
                margin-right: 0;
            }
        }
    }
}
/* ... */

